# local-bricks

./: .databricks.local  .databricks_local.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
localbricks/: __init__.py  main.py
serverless/: README.md  catalog-info.yaml  databricks.yml
serverless/resources/: serverless-job.yml  variables.yml
serverless/src/: main.py
tests/: test_wrapper.py
